- Fixed bug #46139 (PDOStatement->setFetchMode() forgets FETCH_PROPS_LATE)   Initial patch by: chsc at peytz dot dk

MFB:
- Fixed bug #41971 (PDOStatement::fetch and PDOStatement::setFetchMode causes unexpected behavior)
- Fixed bug #42917 (PDO::FETCH_KEY_PAIR doesn't work with setFetchMode)